K8sMode/mybookinfo-k8s.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: mybookinfo
